--- a/src/app/dashboard/manager/manager.component.html
+++ b/src/app/dashboard/manager/manager.component.html
@@ -1,76 +1,21 @@
-<section class="dashboard">
-  <div class="greeting">
-    <h1>Hi, {{ user.firstname }}</h1>
-    <p>
-      As the Area manager, these are the following records that have been
-      forwarded from Finance as of
-      {{ currentdate | date }}
-    </p>
-    <button (click)="onGenerateReport()">Generate Report</button>
+<div>
+  <div class="search">
+    <button mat-raised-button (click)="onGenerateReport()" color="primary">
+      <mat-icon>add</mat-icon>Generate Report
+    </button>
+    <mat-form-field
+      class="search-form-field"
+      floatLabel="never"
+      appearance="outline"
+    >
+      <input matInput placeholder="Search" autocomplete="off" />
+      <button mat-button matSuffix mat-icon-button aria-label="Clear">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
   </div>
-  <ul class="tabs head">
-    <li (click)="onTab('all')">
-      <a [ngClass]="{ active: tab === 'all' }">All</a>
-    </li>
-    <li (click)="onTab('pending')">
-      <a [ngClass]="{ active: tab === 'pending' }">Pending</a>
-    </li>
-    <li (click)="onTab('rejected')">
-      <a [ngClass]="{ active: tab === 'rejected' }">Manager Rejections</a>
-    </li>
-    <li (click)="onTab('rejections')">
-      <a [ngClass]="{ active: tab === 'rejections' }">Accounts Rejections</a>
-    </li>
-    <li (click)="onTab('approved')">
-      <a [ngClass]="{ active: tab === 'approved' }">Approvals</a>
-    </li>
-  </ul>
+</div>
 
-  <form class="inline-form">
-    <input
-      type="search"
-      placeholder="Tracking number"
-      (input)="onSearch($event)"
-    />
-    <button type="submit">Search</button>
-  </form>
-
-  <app-loading *ngIf="loading"></app-loading>
-  <div *ngIf="!loading" class="transactions">
-    <div *ngIf="empty" class="empty">
-      ...<br />
-      No transactions yet
-    </div>
-
-    <div class="table-container" role="table" aria-label="Transactions">
-      <div class="table header" role="rowgroup">
-        <div class="flex-row first" role="columnheader">Delivery Date</div>
-        <div class="flex-row" role="columnheader">Tracking Number</div>
-        <div class="flex-row" role="columnheader">Voucher Number</div>
-        <div class="flex-row" role="columnheader">Amount to be paid</div>
-        <div class="flex-row" role="columnheader">Activity Line</div>
-      </div>
-      <div
-        *ngFor="let transaction of transactions"
-        class="table body"
-        role="rowgroup"
-        (click)="onSelect(transaction._id)"
-      >
-        <div class="flex-row first" role="cell">
-          <span class="flag-icon flag-icon-gb"></span>
-          {{ transaction.deliveryDate | date }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.id | number: "3.0" }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.paymentVoucherNumber }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.amountToBePaid | currency: "UGX ":"code" }}
-        </div>
-        <div class="flex-row" role="cell">{{ transaction.activityLine }}</div>
-      </div>
-    </div>
-  </div>
-</section>
+<div *ngIf="transactions">
+  <app-table [data]="transactions"></app-table>
+</div>
