--- a/src/app/dashboard/manager/manager.component.scss
+++ b/src/app/dashboard/manager/manager.component.scss
@@ -1,67 +1,19 @@
-.dashboard {
-  margin-bottom: 100px;
-  .tabs {
-    display: flex;
-    flex-flow: row;
-    list-style: none;
-    justify-content: space-around;
-    padding: 10px 0;
-    align-self: stretch;
-    color: #555;
-  }
+.search {
+  background-color: #fff;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: top;
+  padding: 0 50px;
+  padding-top: 40px;
 
   button {
-    background-color: #1976d2;
-    border: none;
-    padding: 10px 30px;
-    color: #fff;
-    font-size: 15px;
-    cursor: pointer;
-    &:hover {
-      background-color: #1565c0;
-    }
+    height: 40px;
+    font-size: 18px;
+    width: 250px;
   }
 
-  .head {
-    background-color: #9ff5b9;
-    li {
-      cursor: pointer;
-      a {
-        padding: 3px 15px;
-      }
-    }
-  }
-
-  .greeting {
-    text-align: center;
-    background-color: #9ff5b9;
-    color: #000;
-    padding: 40px 0;
-
-    h1 {
-      font-size: 40px;
-      font-weight: 200;
-    }
-
-    p {
-      margin: 20px 0;
-      font-size: 18px;
-      font-weight: 200;
-    }
-
-    a {
-      color: #fff;
-      text-decoration: none;
-      background-color: #1976d2;
-      padding: 8px 30px;
-      // transition: 1s ease-out;
-      &:hover {
-        background-color: #1565c0;
-      }
-
-      &:active {
-        background-color: #1976d2;
-      }
-    }
+  mat-form-field {
+    margin-top: -17px;
   }
 }
