--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -1,79 +1,21 @@
-<section class="dashboard">
-  <div class="greeting">
-    <h1>Hi, {{ user.firstname }}</h1>
-    <p>This is your account summary as of {{ currentdate | date }}</p>
-
-    <a routerLink="/new">Add new payload</a>
+<div>
+  <div class="search">
+    <button mat-raised-button (click)="onCreate()" color="primary">
+      <mat-icon>add</mat-icon>Create
+    </button>
+    <mat-form-field
+      class="search-form-field"
+      floatLabel="never"
+      appearance="outline"
+    >
+      <input matInput placeholder="Search" autocomplete="off" />
+      <button mat-button matSuffix mat-icon-button aria-label="Clear">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
   </div>
-  <ul class="tabs head">
-    <li (click)="onTab('all')">
-      <a [ngClass]="{ active: tab === 'all' }">All</a>
-    </li>
-    <li (click)="onTab('pending')">
-      <a [ngClass]="{ active: tab === 'pending' }">Pending</a>
-    </li>
-    <li (click)="onTab('rejected')">
-      <a [ngClass]="{ active: tab === 'rejected' }">Rejections from Finance</a>
-    </li>
-    <li (click)="onTab('approved')">
-      <a [ngClass]="{ active: tab === 'approved' }">Approvals for Payment</a>
-    </li>
-  </ul>
+</div>
 
-  <form class="inline-form">
-    <input
-      type="search"
-      placeholder="Tracking number"
-      (input)="onSearch($event)"
-    />
-    <button type="submit">Search</button>
-  </form>
-
-  <app-loading *ngIf="loading"></app-loading>
-  <div *ngIf="!loading" class="transactions">
-    <div *ngIf="empty" class="empty">
-      ...<br />
-      No transactions yet
-    </div>
-
-    <div class="table-container" role="table" aria-label="Transactions">
-      <div class="table header" role="rowgroup">
-        <div class="flex-row first" role="columnheader">Delivery Date</div>
-        <div class="flex-row" role="columnheader">Tracking Number</div>
-        <div class="flex-row" role="columnheader">Voucher Number</div>
-        <div class="flex-row" role="columnheader">Amount to be paid</div>
-        <div class="flex-row" role="columnheader">Activity Line</div>
-      </div>
-      <div
-        *ngFor="let transaction of transactions"
-        class="table body"
-        role="rowgroup"
-        [ngClass]="{
-          red:
-            getTimeDifference(transaction.deliveryDate) > 5 &&
-            transaction.step !== 'approved',
-          green:
-            getTimeDifference(transaction.deliveryDate) > 2 &&
-            getTimeDifference(transaction.deliveryDate) < 5 &&
-            transaction.step !== 'approved'
-        }"
-        (click)="onSelect(transaction._id)"
-      >
-        <div class="flex-row first" role="cell">
-          <span class="flag-icon flag-icon-gb"></span>
-          {{ transaction.deliveryDate | date }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.id | number: "3.0" }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.paymentVoucherNumber }}
-        </div>
-        <div class="flex-row" role="cell">
-          {{ transaction.amountToBePaid | currency: "UGX ":"code" }}
-        </div>
-        <div class="flex-row" role="cell">{{ transaction.activityLine }}</div>
-      </div>
-    </div>
-  </div>
-</section>
+<div *ngIf="trans">
+  <app-table [data]="trans"></app-table>
+</div>
