--- a/src/app/dashboard/accounts/accounts.component.html
+++ b/src/app/dashboard/accounts/accounts.component.html
@@ -14,5 +14,11 @@
 </div>
 
 <div *ngIf="transactions">
-  <app-table [data]="transactions"></app-table>
+  <app-table
+    [data]="trans"
+    [pending]="pending"
+    [rejected]="rejected"
+    [approved]="approved"
+    [tabs]="tabs"
+  ></app-table>
 </div>
