--- a/src/app/dashboard/manager/manager.component.html
+++ b/src/app/dashboard/manager/manager.component.html
@@ -17,5 +17,11 @@
 </div>
 
 <div *ngIf="transactions">
-  <app-table [data]="transactions"></app-table>
+  <app-table
+    [data]="trans"
+    [pending]="pending"
+    [rejected]="rejected"
+    [approved]="approved"
+    [tabs]="tabs"
+  ></app-table>
 </div>
