--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -5,3 +5,8 @@ table {
 mat-tab-group {
   background-color: #fff;
 }
+.mat-icon {
+  color: rgb(0, 153, 255);
+  margin-right: 5px;
+  font-size: 21px;
+}
