--- a/src/app/dashboard/accounts/accounts.component.html
+++ b/src/app/dashboard/accounts/accounts.component.html
@@ -1,38 +1,41 @@
-<div>
-  <div class="search">
-    <mat-form-field
-      class="search-form-field"
-      floatLabel="never"
-      appearance="outline"
-    >
-      <input
-        matInput
-        placeholder="Search"
-        [(ngModel)]="searchKey"
-        autocomplete="off"
-        (keyup)="applyFilter()"
-      />
-      <button
-        *ngIf="searchKey"
-        mat-button
-        matSuffix
-        (click)="onSearchClear()"
-        mat-icon-button
-        aria-label="Clear"
+<app-loading *ngIf="loading"></app-loading>
+<div *ngIf="!loading">
+  <div>
+    <div class="search">
+      <mat-form-field
+        class="search-form-field"
+        floatLabel="never"
+        appearance="outline"
       >
-        <mat-icon>close</mat-icon>
-      </button>
-    </mat-form-field>
+        <input
+          matInput
+          placeholder="Search"
+          [(ngModel)]="searchKey"
+          autocomplete="off"
+          (keyup)="applyFilter()"
+        />
+        <button
+          *ngIf="searchKey"
+          mat-button
+          matSuffix
+          (click)="onSearchClear()"
+          mat-icon-button
+          aria-label="Clear"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
   </div>
-</div>
 
-<div *ngIf="transactions">
-  <app-table
-    [data]="trans"
-    [pending]="pending"
-    [rejected]="rejected"
-    [approved]="approved"
-    [tabs]="tabs"
-    [searchKey]="searchSubject.asObservable()"
-  ></app-table>
+  <div *ngIf="transactions">
+    <app-table
+      [data]="trans"
+      [pending]="pending"
+      [rejected]="rejected"
+      [approved]="approved"
+      [tabs]="tabs"
+      [searchKey]="searchSubject.asObservable()"
+    ></app-table>
+  </div>
 </div>
