Fix: transaction status

--- a/src/app/dashboard/newpayload/newpayload.component.html
+++ b/src/app/dashboard/newpayload/newpayload.component.html
@@ -80,7 +80,7 @@
 
       <mat-grid-tile>
         <mat-form-field appearance="outline">
-          <mat-label>Payment Voucher Number</mat-label>
+          <mat-label>Request For Payment Number</mat-label>
           <input
             matInput
             type="number"
