--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -26,7 +26,7 @@
 
       <mat-list-item>
         <mat-icon mat-list-icon>filter_4</mat-icon>
-        <div mat-line class="title">Payment Voucher Number</div>
+        <div mat-line class="title">Request For Payment Number</div>
         <div mat-line>{{ transaction.paymentVoucherNumber }}</div>
       </mat-list-item>
 
