Fix: activity line in table

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -32,7 +32,7 @@
         <!-- Tracking Number -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Tracking No.
+            TNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.id | number: "3.0" }}
@@ -88,7 +88,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="paymentVoucherNumber">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Request For Payment No.
+             RFPNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.paymentVoucherNumber }}
@@ -97,10 +97,19 @@
 
         <ng-container matColumnDef="projectCode">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Budjet Line
+            Project Code
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.projectCode }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="activityLine">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Activity Line
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.activityLine }}
           </td>
         </ng-container>
 
@@ -193,7 +202,7 @@
         <!-- Tracking Number -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Tracking No.
+            TNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.id | number: "3.0" }}
@@ -249,7 +258,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="paymentVoucherNumber">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Request For Payment No.
+             RFPNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.paymentVoucherNumber }}
@@ -258,10 +267,19 @@
 
         <ng-container matColumnDef="projectCode">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Budjet Line
+            Project Code
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.projectCode }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="activityLine">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Activity Line
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.activityLine }}
           </td>
         </ng-container>
 
@@ -354,7 +372,7 @@
         <!-- Tracking Number -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Tracking No.
+            TNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.id | number: "3.0" }}
@@ -410,7 +428,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="paymentVoucherNumber">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Request For Payment No.
+             RFPNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.paymentVoucherNumber }}
@@ -419,10 +437,19 @@
 
         <ng-container matColumnDef="projectCode">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Budjet Line
+            Project Code
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.projectCode }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="activityLine">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Activity Line
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.activityLine }}
           </td>
         </ng-container>
 
@@ -515,7 +542,7 @@
         <!-- Tracking Number -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Tracking No.
+            TNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.id | number: "3.0" }}
@@ -571,7 +598,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="paymentVoucherNumber">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Request For Payment No.
+             RFPNO
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.paymentVoucherNumber }}
@@ -580,10 +607,19 @@
 
         <ng-container matColumnDef="projectCode">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Budjet Line
+            Project Code
           </th>
           <td mat-cell *matCellDef="let element">
             {{ element.projectCode }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="activityLine">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Activity Line
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.activityLine }}
           </td>
         </ng-container>
 
