Fix: Excel report

--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -81,7 +81,9 @@
   </div>
 
   <h3 style="float: right;" class="timeElapsed" *ngIf="!loading && !error">
-    Time Elapsed:<span> {{ timeElapsed }}</span>
+    Time Elapsed after Delivery Date:<span class="elapsed">
+      {{ timeElapsed }}</span
+    >
   </h3>
 
   <button
